change from javafx to java-swing