@@ -10,18 +10,16 @@ import com.launcher.model.Instance;
 import com.launcher.model.ModLoaderType;
 import com.launcher.Main;
 import com.launcher.util.JsonUtil;
-import javafx.application.Platform;
-import javafx.geometry.Insets;
-import javafx.geometry.Pos;
-import javafx.scene.control.*;
-import javafx.scene.image.Image;
-import javafx.scene.image.ImageView;
-import javafx.scene.layout.*;
-import javafx.stage.DirectoryChooser;
-import javafx.stage.FileChooser;
-import javafx.stage.Stage;
 import com.launcher.manager.LauncherPaths;
+import com.launcher.model.LauncherSettings;
+import com.launcher.manager.SettingsManager;
 
+import javax.imageio.ImageIO;
+import javax.swing.*;
+import javax.swing.border.EmptyBorder;
+import javax.swing.filechooser.FileNameExtensionFilter;
+import java.awt.*;
+import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.InputStream;
 import java.nio.file.Path;
@@ -31,335 +29,316 @@ import java.util.Optional;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
-public class CreateInstanceDialog {
+public class CreateInstanceDialog extends JDialog {
 
-    // Default modpack install base path
     private static final String DEFAULT_MODPACK_BASE = ".minecraft/ModPacks";
 
-    public static Optional<Instance> show(Stage owner) {
-        Dialog<Instance> dialog = new Dialog<>();
-        dialog.initOwner(owner);
-        dialog.setTitle("New Instance");
-        dialog.setHeaderText("Create a new Minecraft instance");
-        dialog.getDialogPane().setPrefWidth(760);
-        dialog.getDialogPane().setMinWidth(720);
+    private Instance result = null;
 
-        var css = CreateInstanceDialog.class.getResource("/com/launcher/styles.css");
-        if (css != null) dialog.getDialogPane().getStylesheets().add(css.toExternalForm());
-        com.launcher.model.LauncherSettings settings = com.launcher.manager.SettingsManager.getInstance().getSettings();
-        Main.applyThemeToPane(dialog.getDialogPane(), settings);
-        // Override background image so the dialog always has a solid background
-        dialog.getDialogPane().setStyle(dialog.getDialogPane().getStyle()
-                + "; -fx-background-image: none;");
+    public static Optional<Instance> show(JFrame owner) {
+        CreateInstanceDialog dialog = new CreateInstanceDialog(owner);
+        dialog.setVisible(true);
+        return Optional.ofNullable(dialog.result);
+    }
 
-        ButtonType createBtn = new ButtonType("Create Instance", ButtonBar.ButtonData.OK_DONE);
-        dialog.getDialogPane().getButtonTypes().addAll(createBtn, ButtonType.CANCEL);
+    private CreateInstanceDialog(JFrame owner) {
+        super(owner, "New Instance", true);
+        setDefaultCloseOperation(DISPOSE_ON_CLOSE);
+        setSize(760, 600);
+        setLocationRelativeTo(owner);
 
-        // ─────────────────────────────────────────────────────────────────────
-        //  Tab pane: "General" and "Modpack"
-        // ─────────────────────────────────────────────────────────────────────
-        TabPane tabs = new TabPane();
-        tabs.setTabClosingPolicy(TabPane.TabClosingPolicy.UNAVAILABLE);
+        LauncherSettings settings = SettingsManager.getInstance().getSettings();
+        Color bg = Main.hexToColor(settings.bgColor, new Color(10, 10, 15));
+        Color panelBg = Main.hexToColor(settings.panelBgColor, new Color(19, 19, 26));
+        Color textColor = Main.hexToColor(settings.textColor, new Color(226, 226, 234));
+        Color accent = Main.hexToColor(settings.accentColor, new Color(16, 185, 129));
+
+        JPanel mainPanel = new JPanel(new BorderLayout());
+        mainPanel.setBackground(panelBg);
+
+        // Header
+        JPanel headerPanel = new JPanel();
+        headerPanel.setLayout(new BoxLayout(headerPanel, BoxLayout.Y_AXIS));
+        headerPanel.setBackground(panelBg);
+        headerPanel.setBorder(BorderFactory.createCompoundBorder(
+                BorderFactory.createMatteBorder(0, 0, 1, 0, new Color(40, 40, 50)),
+                new EmptyBorder(16, 20, 16, 20)
+        ));
+        JLabel titleLbl = new JLabel("New Instance");
+        titleLbl.setFont(new Font("SansSerif", Font.BOLD, 18));
+        titleLbl.setForeground(Color.WHITE);
+        JLabel subLbl = new JLabel("Create a new Minecraft instance");
+        subLbl.setFont(new Font("SansSerif", Font.PLAIN, 12));
+        subLbl.setForeground(new Color(150, 150, 160));
+        headerPanel.add(titleLbl);
+        headerPanel.add(Box.createVerticalStrut(4));
+        headerPanel.add(subLbl);
+        mainPanel.add(headerPanel, BorderLayout.NORTH);
+
+        JTabbedPane tabs = new JTabbedPane();
 
         // ═════════════════════════════════════════════════════════════════════
         //  TAB 1: General
         // ═════════════════════════════════════════════════════════════════════
+        JPanel generalPanel = new JPanel(new GridBagLayout());
+        generalPanel.setBackground(panelBg);
+        generalPanel.setBorder(new EmptyBorder(16, 16, 16, 16));
+        GridBagConstraints gbc = new GridBagConstraints();
+        gbc.fill = GridBagConstraints.HORIZONTAL;
+        gbc.insets = new Insets(6, 6, 6, 6);
 
-        // ── Image picker ──────────────────────────────────────────────────────
-        final String[] chosenImagePath = {null};  // mutable holder
+        // Appearance section
+        int row = 0;
+        addSectionHeader(generalPanel, "Appearance", row++, gbc, textColor);
 
-        ImageView instanceIconView = new ImageView();
-        instanceIconView.setFitWidth(64);
-        instanceIconView.setFitHeight(64);
-        instanceIconView.setPreserveRatio(true);
-        instanceIconView.setStyle("-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.3), 6, 0, 0, 2);");
-        loadDefaultIcon(instanceIconView);
+        // Icon picker row
+        final String[] chosenImagePath = {null};
+        JLabel iconView = new JLabel();
+        iconView.setPreferredSize(new Dimension(64, 64));
+        iconView.setBorder(BorderFactory.createLineBorder(new Color(60, 60, 70), 1));
+        loadDefaultIcon(iconView);
 
-        Button changeImageBtn = new Button("Change Image…");
-        changeImageBtn.setStyle("-fx-font-size:11px; -fx-padding:4px 10px;");
-        Button resetImageBtn  = new Button("Reset");
-        resetImageBtn.setStyle("-fx-font-size:11px; -fx-padding:4px 10px;");
-        resetImageBtn.setDisable(true);
+        JButton changeImageBtn = new JButton("Change Image…");
+        changeImageBtn.setFont(new Font("SansSerif", Font.PLAIN, 11));
+        JButton resetImageBtn = new JButton("Reset");
+        resetImageBtn.setFont(new Font("SansSerif", Font.PLAIN, 11));
+        resetImageBtn.setEnabled(false);
 
-        changeImageBtn.setOnAction(e -> {
-            FileChooser fc = new FileChooser();
-            fc.setTitle("Choose Instance Image");
-            fc.getExtensionFilters().add(
-                    new FileChooser.ExtensionFilter("Images", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.bmp"));
-            File chosen = fc.showOpenDialog(owner);
-            if (chosen != null) {
+        changeImageBtn.addActionListener(e -> {
+            JFileChooser fc = new JFileChooser();
+            fc.setDialogTitle("Choose Instance Image");
+            fc.setFileFilter(new FileNameExtensionFilter("Images", "png", "jpg", "jpeg", "gif", "bmp"));
+            int res = fc.showOpenDialog(this);
+            if (res == JFileChooser.APPROVE_OPTION) {
+                File chosen = fc.getSelectedFile();
                 try {
-                    Image img = new Image(chosen.toURI().toString(), 64, 64, true, true);
-                    instanceIconView.setImage(img);
+                    ImageIcon img = new ImageIcon(chosen.getAbsolutePath());
+                    Image scaled = img.getImage().getScaledInstance(64, 64, Image.SCALE_SMOOTH);
+                    iconView.setIcon(new ImageIcon(scaled));
                     chosenImagePath[0] = chosen.getAbsolutePath();
-                    resetImageBtn.setDisable(false);
-                } catch (Exception ex) {
-                    // ignore bad image
-                }
+                    resetImageBtn.setEnabled(true);
+                } catch (Exception ex) {}
             }
         });
 
-        resetImageBtn.setOnAction(e -> {
-            loadDefaultIcon(instanceIconView);
+        resetImageBtn.addActionListener(e -> {
+            loadDefaultIcon(iconView);
             chosenImagePath[0] = null;
-            resetImageBtn.setDisable(true);
+            resetImageBtn.setEnabled(false);
         });
 
-        VBox imgBtnCol = new VBox(6, changeImageBtn, resetImageBtn);
-        imgBtnCol.setAlignment(Pos.CENTER_LEFT);
-        HBox imageRow = new HBox(14, instanceIconView, imgBtnCol);
-        imageRow.setAlignment(Pos.CENTER_LEFT);
+        JPanel imgBtnCol = new JPanel();
+        imgBtnCol.setLayout(new BoxLayout(imgBtnCol, BoxLayout.Y_AXIS));
+        imgBtnCol.setBackground(panelBg);
+        imgBtnCol.add(changeImageBtn);
+        imgBtnCol.add(Box.createVerticalStrut(4));
+        imgBtnCol.add(resetImageBtn);
 
-        // ── General fields ────────────────────────────────────────────────────
-        TextField nameField = new TextField("My Instance");
-        nameField.setPromptText("Instance name");
+        JPanel imageRowPanel = new JPanel(new FlowLayout(FlowLayout.LEFT, 10, 0));
+        imageRowPanel.setBackground(panelBg);
+        imageRowPanel.add(iconView);
+        imageRowPanel.add(imgBtnCol);
 
-        ComboBox<String> versionBox = new ComboBox<>();
-        versionBox.setMaxWidth(Double.MAX_VALUE);
-        versionBox.setPromptText("Loading versions…");
-        versionBox.setDisable(true);
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 1; gbc.weightx = 0;
+        generalPanel.add(fieldLabel("Icon", textColor), gbc);
+        gbc.gridx = 1; gbc.gridwidth = 2; gbc.weightx = 1.0;
+        generalPanel.add(imageRowPanel, gbc);
+        row++;
 
-        CheckBox snapshotsCb = new CheckBox("Include snapshots");
+        addSectionHeader(generalPanel, "General", row++, gbc, textColor);
 
-        ComboBox<ModLoaderType> loaderBox = new ComboBox<>();
-        loaderBox.setMaxWidth(Double.MAX_VALUE);
-        loaderBox.getItems().addAll(ModLoaderType.VANILLA, ModLoaderType.FABRIC, ModLoaderType.QUILT, ModLoaderType.FORGE, ModLoaderType.NEOFORGE);
-        loaderBox.setValue(ModLoaderType.VANILLA);
+        JTextField nameField = new JTextField("My Instance");
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 1; gbc.weightx = 0;
+        generalPanel.add(fieldLabel("Name", textColor), gbc);
+        gbc.gridx = 1; gbc.gridwidth = 2; gbc.weightx = 1.0;
+        generalPanel.add(nameField, gbc);
+        row++;
 
-        ComboBox<String> loaderVerBox = new ComboBox<>();
-        loaderVerBox.setMaxWidth(Double.MAX_VALUE);
-        loaderVerBox.setPromptText("(no loader)");
-        loaderVerBox.setDisable(true);
+        JComboBox<String> versionBox = new JComboBox<>();
+        versionBox.setEnabled(false);
+        JCheckBox snapshotsCb = new JCheckBox("Include snapshots");
+        snapshotsCb.setBackground(panelBg);
+        snapshotsCb.setForeground(textColor);
 
-        Slider ramSlider = new Slider(1024, 8192, 3072);
-        ramSlider.setMajorTickUnit(1024);
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 1; gbc.weightx = 0;
+        generalPanel.add(fieldLabel("MC Version", textColor), gbc);
+        gbc.gridx = 1; gbc.weightx = 0.6;
+        generalPanel.add(versionBox, gbc);
+        gbc.gridx = 2; gbc.weightx = 0.4;
+        generalPanel.add(snapshotsCb, gbc);
+        row++;
+
+        JComboBox<ModLoaderType> loaderBox = new JComboBox<>(ModLoaderType.values());
+        loaderBox.setSelectedItem(ModLoaderType.VANILLA);
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 1; gbc.weightx = 0;
+        generalPanel.add(fieldLabel("Mod loader", textColor), gbc);
+        gbc.gridx = 1; gbc.gridwidth = 2; gbc.weightx = 1.0;
+        generalPanel.add(loaderBox, gbc);
+        row++;
+
+        JComboBox<String> loaderVerBox = new JComboBox<>();
+        loaderVerBox.setEnabled(false);
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 1; gbc.weightx = 0;
+        generalPanel.add(fieldLabel("Loader version", textColor), gbc);
+        gbc.gridx = 1; gbc.gridwidth = 2; gbc.weightx = 1.0;
+        generalPanel.add(loaderVerBox, gbc);
+        row++;
+
+        addSectionHeader(generalPanel, "Memory", row++, gbc, textColor);
+
+        JSlider ramSlider = new JSlider(1024, 8192, 3072);
+        ramSlider.setMajorTickSpacing(1024);
         ramSlider.setSnapToTicks(true);
-        Label ramLbl = new Label("3072 MB  (3.0 GB)");
-        ramLbl.setStyle("-fx-font-size:11px; -fx-text-fill:-fx-text-muted;");
-        ramSlider.valueProperty().addListener((o, a, b) ->
-            ramLbl.setText(String.format("%d MB  (%.1f GB)", b.intValue(), b.doubleValue() / 1024)));
+        ramSlider.setBackground(panelBg);
+        JLabel ramLbl = new JLabel("3072 MB  (3.0 GB)");
+        ramLbl.setFont(new Font("SansSerif", Font.PLAIN, 11));
+        ramLbl.setForeground(new Color(150, 150, 160));
+        ramSlider.addChangeListener(e -> {
+            int val = ramSlider.getValue();
+            ramLbl.setText(String.format("%d MB  (%.1f GB)", val, (double) val / 1024));
+        });
 
-        RadioButton defaultDirRadio = new RadioButton("Standard .minecraft directory");
-        RadioButton customDirRadio  = new RadioButton("Custom directory");
-        ToggleGroup dirGroup = new ToggleGroup();
-        defaultDirRadio.setToggleGroup(dirGroup);
-        customDirRadio.setToggleGroup(dirGroup);
+        JPanel ramContainer = new JPanel(new BorderLayout());
+        ramContainer.setBackground(panelBg);
+        ramContainer.add(ramSlider, BorderLayout.CENTER);
+        ramContainer.add(ramLbl, BorderLayout.SOUTH);
+
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 1; gbc.weightx = 0;
+        generalPanel.add(fieldLabel("Allocated RAM", textColor), gbc);
+        gbc.gridx = 1; gbc.gridwidth = 2; gbc.weightx = 1.0;
+        generalPanel.add(ramContainer, gbc);
+        row++;
+
+        addSectionHeader(generalPanel, "Directory", row++, gbc, textColor);
+
+        JRadioButton defaultDirRadio = new JRadioButton("Standard .minecraft directory");
+        JRadioButton customDirRadio = new JRadioButton("Custom directory");
+        defaultDirRadio.setBackground(panelBg); defaultDirRadio.setForeground(textColor);
+        customDirRadio.setBackground(panelBg); customDirRadio.setForeground(textColor);
+        ButtonGroup dirGroup = new ButtonGroup();
+        dirGroup.add(defaultDirRadio);
+        dirGroup.add(customDirRadio);
         defaultDirRadio.setSelected(true);
 
-        TextField customDirField = new TextField();
-        customDirField.setPromptText("Path to directory…");
-        customDirField.setDisable(true);
-        Button browseBtn = new Button("Browse…");
-        browseBtn.setDisable(true);
-        browseBtn.setOnAction(e -> {
-            DirectoryChooser dc = new DirectoryChooser();
-            var d = dc.showDialog(owner);
-            if (d != null) customDirField.setText(d.getAbsolutePath());
+        JTextField customDirField = new JTextField();
+        customDirField.setEnabled(false);
+        JButton browseBtn = new JButton("Browse…");
+        browseBtn.setEnabled(false);
+
+        browseBtn.addActionListener(e -> {
+            JFileChooser dc = new JFileChooser();
+            dc.setFileSelectionMode(JFileChooser.DIRECTORIES_ONLY);
+            int d = dc.showOpenDialog(this);
+            if (d == JFileChooser.APPROVE_OPTION) {
+                customDirField.setText(dc.getSelectedFile().getAbsolutePath());
+            }
         });
-        customDirRadio.selectedProperty().addListener((o, a, b) -> {
-            customDirField.setDisable(!b);
-            browseBtn.setDisable(!b);
+
+        defaultDirRadio.addActionListener(e -> {
+            customDirField.setEnabled(false);
+            browseBtn.setEnabled(false);
+        });
+        customDirRadio.addActionListener(e -> {
+            customDirField.setEnabled(true);
+            browseBtn.setEnabled(true);
         });
 
-        // ── Background loaders ────────────────────────────────────────────────
-        Runnable loadVersions = () -> {
-            versionBox.setDisable(true);
-            versionBox.setPromptText("Loading…");
-            new Thread(() -> {
-                try {
-                    List<String> ids = snapshotsCb.isSelected()
-                            ? new VersionManifestService().fetchAllVersionIds()
-                            : new VersionManifestService().fetchReleaseVersionIds();
-                    Platform.runLater(() -> {
-                        versionBox.getItems().setAll(ids);
-                        if (!ids.isEmpty()) versionBox.setValue(ids.get(0));
-                        versionBox.setPromptText(null);
-                        versionBox.setDisable(false);
-                    });
-                } catch (Exception ex) {
-                    Platform.runLater(() -> { versionBox.setPromptText("Failed to load (check connection)"); versionBox.setDisable(false); });
-                }
-            }, "fetch-versions").start();
-        };
-        loadVersions.run();
-        snapshotsCb.setOnAction(e -> loadVersions.run());
+        JPanel dirFieldRow = new JPanel(new BorderLayout(8, 0));
+        dirFieldRow.setBackground(panelBg);
+        dirFieldRow.add(customDirField, BorderLayout.CENTER);
+        dirFieldRow.add(browseBtn, BorderLayout.EAST);
 
-        Runnable loadLoaderVers = () -> {
-            loaderVerBox.getItems().clear();
-            ModLoaderType loader = loaderBox.getValue();
-            String mcVer = versionBox.getValue();
-            if (loader == ModLoaderType.VANILLA || mcVer == null) {
-                loaderVerBox.setDisable(true); loaderVerBox.setPromptText("(no loader)"); return;
-            }
-            if (loader == ModLoaderType.FORGE) {
-                loaderVerBox.setDisable(false);
-                loaderVerBox.getItems().addAll("Recommended", "Latest");
-                loaderVerBox.setValue("Recommended"); return;
-            }
-            if (loader == ModLoaderType.NEOFORGE) {
-                loaderVerBox.setDisable(true); loaderVerBox.setPromptText("Loading…");
-                new Thread(() -> {
-                    try {
-                        java.util.List<String> vers = new NeoForgeInstaller().fetchVersions(mcVer);
-                        Platform.runLater(() -> {
-                            loaderVerBox.getItems().setAll(vers);
-                            if (!vers.isEmpty()) loaderVerBox.setValue(vers.get(0));
-                            loaderVerBox.setDisable(false);
-                        });
-                    } catch (Exception ex) {
-                        Platform.runLater(() -> { loaderVerBox.setPromptText("Failed to load"); loaderVerBox.setDisable(false); });
-                    }
-                }, "fetch-neoforge-vers").start();
-                return;
-            }
-            // FABRIC or QUILT
-            loaderVerBox.setDisable(true); loaderVerBox.setPromptText("Loading…");
-            final boolean isQuilt = loader == ModLoaderType.QUILT;
-            new Thread(() -> {
-                try {
-                    java.util.List<String> vers;
-                    if (isQuilt) {
-                        vers = new QuiltInstaller().fetchLoaderVersions(mcVer);
-                    } else {
-                        vers = new FabricInstaller().fetchLoaderVersions(mcVer);
-                    }
-                    final java.util.List<String> fv = vers;
-                    Platform.runLater(() -> { loaderVerBox.getItems().setAll(fv); if (!fv.isEmpty()) loaderVerBox.setValue(fv.get(0)); loaderVerBox.setDisable(false); });
-                } catch (Exception ex) { Platform.runLater(() -> { loaderVerBox.setPromptText("Failed to load"); loaderVerBox.setDisable(false); }); }
-            }, "fetch-loader-vers").start();
-        };
-        loaderBox.valueProperty().addListener((o, a, b) -> loadLoaderVers.run());
-        versionBox.valueProperty().addListener((o, a, b) -> loadLoaderVers.run());
+        JPanel dirGroupPanel = new JPanel();
+        dirGroupPanel.setLayout(new BoxLayout(dirGroupPanel, BoxLayout.Y_AXIS));
+        dirGroupPanel.setBackground(panelBg);
+        dirGroupPanel.add(defaultDirRadio);
+        dirGroupPanel.add(customDirRadio);
+        dirGroupPanel.add(Box.createVerticalStrut(4));
+        dirGroupPanel.add(dirFieldRow);
 
-        // ── General tab layout ────────────────────────────────────────────────
-        GridPane generalGrid = new GridPane();
-        generalGrid.setHgap(12); generalGrid.setVgap(12);
-        generalGrid.setPadding(new Insets(20));
-        ColumnConstraints lColG = new ColumnConstraints(); lColG.setMinWidth(140); lColG.setHgrow(Priority.NEVER);
-        ColumnConstraints rColG = new ColumnConstraints(); rColG.setHgrow(Priority.ALWAYS);
-        ColumnConstraints xColG = new ColumnConstraints(); xColG.setMinWidth(130);
-        generalGrid.getColumnConstraints().addAll(lColG, rColG, xColG);
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 1; gbc.weightx = 0;
+        generalPanel.add(fieldLabel("Game directory", textColor), gbc);
+        gbc.gridx = 1; gbc.gridwidth = 2; gbc.weightx = 1.0;
+        generalPanel.add(dirGroupPanel, gbc);
+        row++;
 
-        int r = 0;
-        addSectionHeader(generalGrid, "Appearance", r++);
-        generalGrid.add(fieldLabel("Icon"), 0, r);
-        generalGrid.add(imageRow, 1, r++, 2, 1);
-
-        addSectionHeader(generalGrid, "General", r++);
-        generalGrid.addRow(r++, fieldLabel("Name"),           nameField,   new Label());
-        generalGrid.add(fieldLabel("MC Version"), 0, r);
-        generalGrid.add(versionBox, 1, r);
-        generalGrid.add(snapshotsCb, 2, r++);
-        generalGrid.addRow(r++, fieldLabel("Mod loader"),     loaderBox,   new Label());
-        generalGrid.addRow(r++, fieldLabel("Loader version"), loaderVerBox, new Label());
-
-        addSectionHeader(generalGrid, "Memory", r++);
-        VBox ramBox = new VBox(4, ramSlider, ramLbl);
-        generalGrid.addRow(r++, fieldLabel("Allocated RAM"),  ramBox,       new Label());
-
-        addSectionHeader(generalGrid, "Directory", r++);
-        generalGrid.add(fieldLabel("Game directory"), 0, r);
-        generalGrid.add(defaultDirRadio, 1, r++, 2, 1);
-        generalGrid.add(customDirRadio, 1, r++, 2, 1);
-        HBox dirRow = new HBox(8, customDirField, browseBtn);
-        HBox.setHgrow(customDirField, Priority.ALWAYS);
-        generalGrid.add(dirRow, 1, r++, 2, 1);
-
-        ScrollPane generalScroll = new ScrollPane(generalGrid);
-        generalScroll.setFitToWidth(true);
-        generalScroll.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
-
-        Tab generalTab = new Tab("⚙  General", generalScroll);
+        JScrollPane generalScroll = new JScrollPane(generalPanel);
+        generalScroll.setBorder(null);
+        tabs.addTab("General", generalScroll);
 
         // ═════════════════════════════════════════════════════════════════════
         //  TAB 2: Modpack
         // ═════════════════════════════════════════════════════════════════════
+        JPanel modpackPanel = new JPanel(new GridBagLayout());
+        modpackPanel.setBackground(panelBg);
+        modpackPanel.setBorder(new EmptyBorder(16, 16, 16, 16));
+        GridBagConstraints mgbc = new GridBagConstraints();
+        mgbc.fill = GridBagConstraints.HORIZONTAL;
+        mgbc.insets = new Insets(6, 6, 6, 6);
 
-        // Mutable holders
+        int mrow = 0;
+        addSectionHeader(modpackPanel, "Modpack File", mrow++, mgbc, textColor);
+
         final String[] chosenModpackPath = {null};
+        JLabel modpackFileHint = new JLabel("No file selected");
+        modpackFileHint.setFont(new Font("SansSerif", Font.PLAIN, 11));
+        modpackFileHint.setForeground(new Color(150, 150, 160));
 
-        // ── Modpack file row ──────────────────────────────────────────────────
-        Label modpackFileHint = new Label("No file selected");
-        modpackFileHint.setStyle("-fx-font-size:11px; -fx-text-fill:-fx-text-muted;");
-        modpackFileHint.setWrapText(true);
+        JButton modpackBrowseBtn = new JButton("Browse…");
+        JButton modpackClearBtn = new JButton("Clear");
+        modpackClearBtn.setEnabled(false);
 
-        Button modpackBrowseBtn = new Button("Browse…");
-        Button modpackClearBtn  = new Button("Clear");
-        modpackClearBtn.setDisable(true);
-
-        // ── Install path row ──────────────────────────────────────────────────
-        // Declared early so the modpack browse action can update it
         String defaultInstallPath = resolveDefaultModpackPath();
-        TextField installPathField = new TextField(defaultInstallPath);
-        installPathField.setPromptText(DEFAULT_MODPACK_BASE);
-        HBox.setHgrow(installPathField, Priority.ALWAYS);
+        JTextField installPathField = new JTextField(defaultInstallPath);
 
-        // ── Detected modpack info label (shown below file selector) ─────────
-        Label detectedInfoLabel = new Label("");
-        detectedInfoLabel.setStyle("-fx-font-size:11px; -fx-text-fill:-fx-accent-color; -fx-wrap-text:true;");
-        detectedInfoLabel.setWrapText(true);
+        JLabel detectedInfoLabel = new JLabel(" ");
+        detectedInfoLabel.setFont(new Font("SansSerif", Font.PLAIN, 11));
+        detectedInfoLabel.setForeground(accent);
         detectedInfoLabel.setVisible(false);
-        detectedInfoLabel.setManaged(false);
 
-        modpackBrowseBtn.setOnAction(e -> {
-            FileChooser fc = new FileChooser();
-            fc.setTitle("Select Modpack File");
-            fc.getExtensionFilters().addAll(
-                    new FileChooser.ExtensionFilter("Modpack files", "*.mrpack", "*.zip"),
-                    new FileChooser.ExtensionFilter("Modrinth Modpack (*.mrpack)", "*.mrpack"),
-                    new FileChooser.ExtensionFilter("ZIP Modpack (*.zip)", "*.zip"),
-                    new FileChooser.ExtensionFilter("All files", "*.*")
-            );
-            File chosen = fc.showOpenDialog(owner);
-            if (chosen != null) {
+        modpackBrowseBtn.addActionListener(e -> {
+            JFileChooser fc = new JFileChooser();
+            fc.setDialogTitle("Select Modpack File");
+            fc.setFileFilter(new FileNameExtensionFilter("Modpack files", "mrpack", "zip"));
+            int res = fc.showOpenDialog(this);
+            if (res == JFileChooser.APPROVE_OPTION) {
+                File chosen = fc.getSelectedFile();
                 chosenModpackPath[0] = chosen.getAbsolutePath();
                 modpackFileHint.setText(chosen.getName());
-                modpackFileHint.setStyle("-fx-font-size:11px; -fx-text-fill:-fx-text-color;");
-                modpackClearBtn.setDisable(false);
+                modpackFileHint.setForeground(textColor);
+                modpackClearBtn.setEnabled(true);
 
-                // Auto-populate instance name from filename (fallback)
                 String fname = chosen.getName();
-                String suggested = fname.contains(".")
-                        ? fname.substring(0, fname.lastIndexOf('.'))
-                        : fname;
+                String suggested = fname.contains(".") ? fname.substring(0, fname.lastIndexOf('.')) : fname;
                 suggested = suggested.replace('_', ' ').replace('-', ' ').trim();
-                if (!suggested.isBlank()) nameField.setText(suggested);
+                if (!suggested.isEmpty()) nameField.setText(suggested);
 
-                // Auto-update install path
-                String folderName = fname.contains(".")
-                        ? fname.substring(0, fname.lastIndexOf('.'))
-                        : fname;
-                installPathField.setText(resolveDefaultModpackPath() + java.io.File.separator + folderName);
+                String folderName = fname.contains(".") ? fname.substring(0, fname.lastIndexOf('.')) : fname;
+                installPathField.setText(resolveDefaultModpackPath() + File.separator + folderName);
 
-                // ── Parse modpack metadata for version/loader auto-detection ──
                 ModpackMeta meta = parseModpackMetadata(chosen);
                 if (meta != null) {
-                    // Override instance name if modpack has a name
-                    if (meta.name != null && !meta.name.isBlank()) {
-                        nameField.setText(meta.name);
-                    }
-                    // Set Minecraft version
+                    if (meta.name != null && !meta.name.isEmpty()) nameField.setText(meta.name);
                     if (meta.mcVersion != null) {
-                        // Add the version if not already in the list
-                        if (!versionBox.getItems().contains(meta.mcVersion)) {
-                            versionBox.getItems().add(0, meta.mcVersion);
+                        DefaultComboBoxModel<String> model = (DefaultComboBoxModel<String>) versionBox.getModel();
+                        if (model.getIndexOf(meta.mcVersion) == -1) {
+                            model.insertElementAt(meta.mcVersion, 0);
                         }
-                        versionBox.setValue(meta.mcVersion);
-                        versionBox.setDisable(true);
+                        versionBox.setSelectedItem(meta.mcVersion);
+                        versionBox.setEnabled(false);
                     }
-                    // Set mod loader
                     if (meta.loaderType != null) {
-                        loaderBox.setValue(meta.loaderType);
-                        loaderBox.setDisable(true);
+                        loaderBox.setSelectedItem(meta.loaderType);
+                        loaderBox.setEnabled(false);
                         if (meta.loaderVersion != null) {
-                            if (!loaderVerBox.getItems().contains(meta.loaderVersion)) {
-                                loaderVerBox.getItems().add(0, meta.loaderVersion);
+                            DefaultComboBoxModel<String> model = (DefaultComboBoxModel<String>) loaderVerBox.getModel();
+                            if (model.getIndexOf(meta.loaderVersion) == -1) {
+                                model.insertElementAt(meta.loaderVersion, 0);
                             }
-                            loaderVerBox.setValue(meta.loaderVersion);
-                            loaderVerBox.setDisable(true);
+                            loaderVerBox.setSelectedItem(meta.loaderVersion);
+                            loaderVerBox.setEnabled(false);
                         }
                     }
-                    // Show detected info
                     StringBuilder info = new StringBuilder("Detected from modpack: ");
                     if (meta.mcVersion != null) info.append("MC ").append(meta.mcVersion);
                     if (meta.loaderType != null) {
@@ -368,138 +347,220 @@ public class CreateInstanceDialog {
                     }
                     detectedInfoLabel.setText(info.toString());
                     detectedInfoLabel.setVisible(true);
-                    detectedInfoLabel.setManaged(true);
                 } else {
                     detectedInfoLabel.setVisible(false);
-                    detectedInfoLabel.setManaged(false);
                 }
             }
         });
 
-        modpackClearBtn.setOnAction(e -> {
+        modpackClearBtn.addActionListener(e -> {
             chosenModpackPath[0] = null;
             modpackFileHint.setText("No file selected");
-            modpackFileHint.setStyle("-fx-font-size:11px; -fx-text-fill:-fx-text-muted;");
-            modpackClearBtn.setDisable(true);
+            modpackFileHint.setForeground(new Color(150, 150, 160));
+            modpackClearBtn.setEnabled(false);
             installPathField.setText(defaultInstallPath);
-            // Re-enable version/loader fields
-            versionBox.setDisable(false);
-            loaderBox.setDisable(false);
-            loaderVerBox.setDisable(false);
+            versionBox.setEnabled(true);
+            loaderBox.setEnabled(true);
+            loaderVerBox.setEnabled(true);
             detectedInfoLabel.setVisible(false);
-            detectedInfoLabel.setManaged(false);
         });
 
-        HBox modpackFileBtns = new HBox(8, modpackBrowseBtn, modpackClearBtn);
-        modpackFileBtns.setAlignment(Pos.CENTER_LEFT);
-        VBox modpackFileBox = new VBox(6, modpackFileHint, modpackFileBtns, detectedInfoLabel);
+        JPanel modpackFileBtns = new JPanel(new FlowLayout(FlowLayout.LEFT, 8, 0));
+        modpackFileBtns.setBackground(panelBg);
+        modpackFileBtns.add(modpackBrowseBtn);
+        modpackFileBtns.add(modpackClearBtn);
 
-        // ── Install path row ──────────────────────────────────────────────────
-        Button installPathBrowseBtn = new Button("Browse…");
-        installPathBrowseBtn.setOnAction(e -> {
-            DirectoryChooser dc = new DirectoryChooser();
-            dc.setTitle("Choose Install Location");
-            try {
-                File initial = new File(installPathField.getText());
-                if (initial.exists()) dc.setInitialDirectory(initial);
-            } catch (Exception ignored) {}
-            File chosen = dc.showDialog(owner);
-            if (chosen != null) installPathField.setText(chosen.getAbsolutePath());
+        JPanel modpackFileBox = new JPanel();
+        modpackFileBox.setLayout(new BoxLayout(modpackFileBox, BoxLayout.Y_AXIS));
+        modpackFileBox.setBackground(panelBg);
+        modpackFileBox.add(modpackFileHint);
+        modpackFileBox.add(Box.createVerticalStrut(4));
+        modpackFileBox.add(modpackFileBtns);
+        modpackFileBox.add(Box.createVerticalStrut(4));
+        modpackFileBox.add(detectedInfoLabel);
+
+        mgbc.gridx = 0; mgbc.gridy = mrow; mgbc.gridwidth = 1; mgbc.weightx = 0;
+        modpackPanel.add(fieldLabel("File (.mrpack / .zip)", textColor), mgbc);
+        mgbc.gridx = 1; mgbc.gridwidth = 1; mgbc.weightx = 1.0;
+        modpackPanel.add(modpackFileBox, mgbc);
+        mrow++;
+
+        addSectionHeader(modpackPanel, "Install Location", mrow++, mgbc, textColor);
+
+        JButton installPathBrowseBtn = new JButton("Browse…");
+        installPathBrowseBtn.addActionListener(e -> {
+            JFileChooser dc = new JFileChooser();
+            dc.setFileSelectionMode(JFileChooser.DIRECTORIES_ONLY);
+            int chosenRes = dc.showOpenDialog(this);
+            if (chosenRes == JFileChooser.APPROVE_OPTION) {
+                installPathField.setText(dc.getSelectedFile().getAbsolutePath());
+            }
         });
 
-        Button resetInstallPathBtn = new Button("Reset");
-        resetInstallPathBtn.setOnAction(e -> installPathField.setText(defaultInstallPath));
+        JButton resetInstallPathBtn = new JButton("Reset");
+        resetInstallPathBtn.addActionListener(e -> installPathField.setText(defaultInstallPath));
 
-        HBox installPathRow = new HBox(8, installPathField, installPathBrowseBtn, resetInstallPathBtn);
-        installPathRow.setAlignment(Pos.CENTER_LEFT);
+        JPanel installPathRow = new JPanel(new BorderLayout(8, 0));
+        installPathRow.setBackground(panelBg);
+        installPathRow.add(installPathField, BorderLayout.CENTER);
+        JPanel installPathBtns = new JPanel(new FlowLayout(FlowLayout.RIGHT, 4, 0));
+        installPathBtns.setBackground(panelBg);
+        installPathBtns.add(installPathBrowseBtn);
+        installPathBtns.add(resetInstallPathBtn);
+        installPathRow.add(installPathBtns, BorderLayout.EAST);
 
-        // ── Info label ────────────────────────────────────────────────────────
-        Label modpackInfoLabel = new Label(
-                "Supported formats: .mrpack (Modrinth) and .zip modpacks.\n" +
-                "The modpack will be extracted into the install path when you create the instance.");
-        modpackInfoLabel.setStyle("-fx-font-size:11px; -fx-text-fill:-fx-text-muted; -fx-wrap-text:true;");
-        modpackInfoLabel.setWrapText(true);
+        mgbc.gridx = 0; mgbc.gridy = mrow; mgbc.gridwidth = 1; mgbc.weightx = 0;
+        modpackPanel.add(fieldLabel("Install path", textColor), mgbc);
+        mgbc.gridx = 1; mgbc.gridwidth = 1; mgbc.weightx = 1.0;
+        modpackPanel.add(installPathRow, mgbc);
+        mrow++;
 
-        // ── Modpack tab layout ────────────────────────────────────────────────
-        GridPane modpackGrid = new GridPane();
-        modpackGrid.setHgap(12); modpackGrid.setVgap(12);
-        modpackGrid.setPadding(new Insets(20));
-        ColumnConstraints lColM = new ColumnConstraints(); lColM.setMinWidth(140); lColM.setHgrow(Priority.NEVER);
-        ColumnConstraints rColM = new ColumnConstraints(); rColM.setHgrow(Priority.ALWAYS);
-        modpackGrid.getColumnConstraints().addAll(lColM, rColM);
+        JLabel modpackInfoLabel = new JLabel("<html>Supported formats: .mrpack (Modrinth) and .zip modpacks.<br>The modpack will be extracted into the install path when you create the instance.</html>");
+        modpackInfoLabel.setFont(new Font("SansSerif", Font.PLAIN, 11));
+        modpackInfoLabel.setForeground(new Color(150, 150, 160));
+        mgbc.gridx = 0; mgbc.gridy = mrow; mgbc.gridwidth = 2; mgbc.weightx = 1.0;
+        modpackPanel.add(modpackInfoLabel, mgbc);
 
-        int mr = 0;
-        addSectionHeader(modpackGrid, "Modpack File", mr++, 2);
-        modpackGrid.add(fieldLabel("File (.mrpack / .zip)"), 0, mr);
-        modpackGrid.add(modpackFileBox, 1, mr++);
+        JScrollPane modpackScroll = new JScrollPane(modpackPanel);
+        modpackScroll.setBorder(null);
+        tabs.addTab("Modpack", modpackScroll);
 
-        addSectionHeader(modpackGrid, "Install Location", mr++, 2);
-        modpackGrid.add(fieldLabel("Install path"), 0, mr);
-        modpackGrid.add(installPathRow, 1, mr++);
+        mainPanel.add(tabs, BorderLayout.CENTER);
 
-        modpackGrid.add(modpackInfoLabel, 0, mr++, 2, 1);
+        // ── Loaders ──────────────────────────────────────────────────────────
+        Runnable loadVersions = () -> {
+            versionBox.setEnabled(false);
+            new Thread(() -> {
+                try {
+                    List<String> ids = snapshotsCb.isSelected()
+                            ? new VersionManifestService().fetchAllVersionIds()
+                            : new VersionManifestService().fetchReleaseVersionIds();
+                    SwingUtilities.invokeLater(() -> {
+                        versionBox.removeAllItems();
+                        for (String id : ids) versionBox.addItem(id);
+                        versionBox.setEnabled(true);
+                    });
+                } catch (Exception ex) {
+                    SwingUtilities.invokeLater(() -> {
+                        versionBox.removeAllItems();
+                        versionBox.addItem("Failed to load versions");
+                        versionBox.setEnabled(true);
+                    });
+                }
+            }, "fetch-versions").start();
+        };
 
-        ScrollPane modpackScroll = new ScrollPane(modpackGrid);
-        modpackScroll.setFitToWidth(true);
-        modpackScroll.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
+        Runnable loadLoaderVers = () -> {
+            loaderVerBox.removeAllItems();
+            ModLoaderType loader = (ModLoaderType) loaderBox.getSelectedItem();
+            String mcVer = (String) versionBox.getSelectedItem();
+            if (loader == ModLoaderType.VANILLA || mcVer == null) {
+                loaderVerBox.setEnabled(false);
+                return;
+            }
+            if (loader == ModLoaderType.FORGE) {
+                loaderVerBox.setEnabled(true);
+                loaderVerBox.addItem("Recommended");
+                loaderVerBox.addItem("Latest");
+                loaderVerBox.setSelectedItem("Recommended");
+                return;
+            }
+            if (loader == ModLoaderType.NEOFORGE) {
+                loaderVerBox.setEnabled(false);
+                new Thread(() -> {
+                    try {
+                        List<String> vers = new NeoForgeInstaller().fetchVersions(mcVer);
+                        SwingUtilities.invokeLater(() -> {
+                            loaderVerBox.removeAllItems();
+                            for (String v : vers) loaderVerBox.addItem(v);
+                            loaderVerBox.setEnabled(true);
+                        });
+                    } catch (Exception ex) {
+                        SwingUtilities.invokeLater(() -> {
+                            loaderVerBox.removeAllItems();
+                            loaderVerBox.addItem("Failed to load");
+                            loaderVerBox.setEnabled(true);
+                        });
+                    }
+                }, "fetch-neoforge-vers").start();
+                return;
+            }
+            loaderVerBox.setEnabled(false);
+            final boolean isQuilt = loader == ModLoaderType.QUILT;
+            new Thread(() -> {
+                try {
+                    List<String> vers = isQuilt ? new QuiltInstaller().fetchLoaderVersions(mcVer)
+                                                : new FabricInstaller().fetchLoaderVersions(mcVer);
+                    SwingUtilities.invokeLater(() -> {
+                        loaderVerBox.removeAllItems();
+                        for (String v : vers) loaderVerBox.addItem(v);
+                        loaderVerBox.setEnabled(true);
+                    });
+                } catch (Exception ex) {
+                    SwingUtilities.invokeLater(() -> {
+                        loaderVerBox.removeAllItems();
+                        loaderVerBox.addItem("Failed to load");
+                        loaderVerBox.setEnabled(true);
+                    });
+                }
+            }, "fetch-loader-vers").start();
+        };
 
-        Tab modpackTab = new Tab("📦  Modpack", modpackScroll);
+        versionBox.addActionListener(e -> loadLoaderVers.run());
+        loaderBox.addActionListener(e -> loadLoaderVers.run());
+        snapshotsCb.addActionListener(e -> loadVersions.run());
 
-        // ── Assemble tabs ─────────────────────────────────────────────────────
-        tabs.getTabs().addAll(generalTab, modpackTab);
+        loadVersions.run();
 
+        // Footer buttons
+        JPanel footerPanel = new JPanel(new FlowLayout(FlowLayout.RIGHT, 10, 10));
+        footerPanel.setBackground(panelBg);
+        footerPanel.setBorder(BorderFactory.createMatteBorder(1, 0, 0, 0, new Color(40, 40, 50)));
 
-        dialog.getDialogPane().setContent(tabs);
+        JButton cancelBtn = new JButton("Cancel");
+        cancelBtn.addActionListener(e -> dispose());
+        footerPanel.add(cancelBtn);
 
-        // Make the dialog window resizable and moveable (DECORATED style is the default for Dialog)
-        dialog.getDialogPane().getScene().getWindow().setOnShown(ev -> {
-            javafx.stage.Stage dlgStage = (javafx.stage.Stage) dialog.getDialogPane().getScene().getWindow();
-            dlgStage.setResizable(true);
-        });
+        JButton createBtn = new JButton("Create Instance");
+        createBtn.setBackground(accent);
+        createBtn.setForeground(Color.WHITE);
+        createBtn.addActionListener(e -> {
+            String name = nameField.getText().trim();
+            String ver = (String) versionBox.getSelectedItem();
+            if (name.isEmpty() || ver == null) {
+                JOptionPane.showMessageDialog(this, "Instance name and MC version are required.", "Error", JOptionPane.ERROR_MESSAGE);
+                return;
+            }
+            ModLoaderType lType = (ModLoaderType) loaderBox.getSelectedItem();
+            String lVer = lType == ModLoaderType.VANILLA ? null : (String) loaderVerBox.getSelectedItem();
 
-        // ─────────────────────────────────────────────────────────────────────
-        //  Result converter
-        // ─────────────────────────────────────────────────────────────────────
-        dialog.setResultConverter(bt -> {
-            if (bt != createBtn) return null;
-            if (nameField.getText().isBlank() || versionBox.getValue() == null) return null;
+            result = new Instance(name, ver, lType, lVer);
+            result.ramMb = ramSlider.getValue();
+            result.imagePath = chosenImagePath[0];
 
-            String loaderVer = loaderBox.getValue() == ModLoaderType.VANILLA ? null : loaderVerBox.getValue();
-            Instance inst = new Instance(nameField.getText().trim(), versionBox.getValue(), loaderBox.getValue(), loaderVer);
-            inst.ramMb = (int) ramSlider.getValue();
-
-            // Instance image
-            inst.imagePath = chosenImagePath[0]; // null → use default
-
-            // Modpack
             if (chosenModpackPath[0] != null) {
-                String installPath = installPathField.getText().isBlank()
-                        ? defaultInstallPath : installPathField.getText();
-                inst.modpackFilePath    = chosenModpackPath[0];
-                inst.modpackInstallPath = installPath;
-                // Game directory follows modpack install path automatically
-                inst.useCustomDirectory  = true;
-                inst.customDirectoryPath = installPath;
+                String path = installPathField.getText().trim().isEmpty() ? defaultInstallPath : installPathField.getText().trim();
+                result.modpackFilePath = chosenModpackPath[0];
+                result.modpackInstallPath = path;
+                result.useCustomDirectory = true;
+                result.customDirectoryPath = path;
             } else {
-                // Directory from General tab
                 if (defaultDirRadio.isSelected()) {
-                    inst.useCustomDirectory  = true;
-                    inst.customDirectoryPath = LauncherPaths.getDefaultMinecraftPath().toAbsolutePath().toString();
+                    result.useCustomDirectory = true;
+                    result.customDirectoryPath = LauncherPaths.getDefaultMinecraftPath().toAbsolutePath().toString();
                 } else if (customDirRadio.isSelected()) {
-                    inst.useCustomDirectory  = true;
-                    inst.customDirectoryPath = customDirField.getText();
+                    result.useCustomDirectory = true;
+                    result.customDirectoryPath = customDirField.getText().trim();
                 }
             }
-
-            return inst;
+            dispose();
         });
+        footerPanel.add(createBtn);
 
-        return dialog.showAndWait();
+        mainPanel.add(footerPanel, BorderLayout.SOUTH);
+        setContentPane(mainPanel);
     }
 
-    // ─── Helpers ──────────────────────────────────────────────────────────────
-
-    /** Resolve the default modpack install path: ~/.<user-home>/.minecraft/ModPacks */
     private static String resolveDefaultModpackPath() {
         try {
             Path home = Path.of(System.getProperty("user.home", "."));
@@ -509,42 +570,43 @@ public class CreateInstanceDialog {
         }
     }
 
-    /** Load the bundled default icon into an ImageView; silently falls back if not found. */
-    private static void loadDefaultIcon(ImageView view) {
+    private static void loadDefaultIcon(JLabel label) {
         try {
             InputStream is = CreateInstanceDialog.class.getResourceAsStream("/com/launcher/minecraft_image.png");
             if (is != null) {
-                view.setImage(new Image(is, 64, 64, true, true));
+                BufferedImage img = ImageIO.read(is);
+                Image scaled = img.getScaledInstance(64, 64, Image.SCALE_SMOOTH);
+                label.setIcon(new ImageIcon(scaled));
                 return;
             }
         } catch (Exception ignored) {}
-        // Fallback: programmatic placeholder (grey square with a pickaxe emoji feel)
-        view.setImage(null);
+        label.setIcon(null);
     }
 
-    private static void addSectionHeader(GridPane grid, String text, int row) {
-        addSectionHeader(grid, text, row, 3);
+    private static void addSectionHeader(JPanel panel, String text, int row, GridBagConstraints gbc, Color textColor) {
+        gbc.gridx = 0; gbc.gridy = row; gbc.gridwidth = 3; gbc.weightx = 1.0;
+        JPanel sepPanel = new JPanel(new GridBagLayout());
+        sepPanel.setBackground(panel.getBackground());
+        JLabel l = new JLabel(text.toUpperCase());
+        l.setFont(new Font("SansSerif", Font.BOLD, 10));
+        l.setForeground(new Color(150, 150, 160));
+        JSeparator sep = new JSeparator();
+        GridBagConstraints sgbc = new GridBagConstraints();
+        sgbc.fill = GridBagConstraints.HORIZONTAL;
+        sgbc.insets = new Insets(0, 8, 0, 0);
+        sgbc.weightx = 1.0;
+        sepPanel.add(l);
+        sepPanel.add(sep, sgbc);
+        panel.add(sepPanel, gbc);
     }
 
-    private static void addSectionHeader(GridPane grid, String text, int row, int colspan) {
-        Label l = new Label(text.toUpperCase());
-        l.setStyle("-fx-font-size:10px; -fx-font-weight:bold; -fx-text-fill:-fx-text-muted; -fx-letter-spacing:1.5px; -fx-padding:8px 0 2px 0;");
-        Separator sep = new Separator();
-        HBox h = new HBox(8, l, sep);
-        HBox.setHgrow(sep, Priority.ALWAYS);
-        h.setAlignment(Pos.CENTER_LEFT);
-        grid.add(h, 0, row, colspan, 1);
-    }
-
-    private static Label fieldLabel(String text) {
-        Label l = new Label(text);
-        l.setStyle("-fx-font-size:12px; -fx-text-fill:-fx-text-color;");
+    private static JLabel fieldLabel(String text, Color textColor) {
+        JLabel l = new JLabel(text);
+        l.setFont(new Font("SansSerif", Font.PLAIN, 12));
+        l.setForeground(textColor);
         return l;
     }
 
-    // ─── Modpack metadata parsing ─────────────────────────────────────────────
-
-    /** Simple holder for detected modpack metadata. */
     private static class ModpackMeta {
         String name;
         String mcVersion;
@@ -552,10 +614,6 @@ public class CreateInstanceDialog {
         String loaderVersion;
     }
 
-    /**
-     * Parses a modpack file (.mrpack or .zip) to extract Minecraft version and mod loader info.
-     * Returns null if metadata could not be parsed.
-     */
     private static ModpackMeta parseModpackMetadata(File modpackFile) {
         String fileName = modpackFile.getName().toLowerCase();
         try {
@@ -564,36 +622,24 @@ public class CreateInstanceDialog {
             } else if (fileName.endsWith(".zip")) {
                 return parseZipMeta(modpackFile);
             }
-        } catch (Exception e) {
-            // Silently fail — metadata detection is best-effort
-        }
+        } catch (Exception e) {}
         return null;
     }
 
-    /** Parses modrinth.index.json inside a .mrpack file. */
     private static ModpackMeta parseMrpackMeta(File file) throws Exception {
         try (ZipFile zip = new ZipFile(file)) {
             ZipEntry entry = zip.getEntry("modrinth.index.json");
             if (entry == null) return null;
-
             String json;
             try (InputStream is = zip.getInputStream(entry)) {
                 json = new String(is.readAllBytes());
             }
             JsonObject root = JsonUtil.parse(json).getAsJsonObject();
             ModpackMeta meta = new ModpackMeta();
-
-            // Name
-            if (root.has("name")) {
-                meta.name = root.get("name").getAsString();
-            }
-
-            // Dependencies: { "minecraft": "1.20.1", "fabric-loader": "0.14.21", ... }
+            if (root.has("name")) meta.name = root.get("name").getAsString();
             if (root.has("dependencies")) {
                 JsonObject deps = root.getAsJsonObject("dependencies");
-                if (deps.has("minecraft")) {
-                    meta.mcVersion = deps.get("minecraft").getAsString();
-                }
+                if (deps.has("minecraft")) meta.mcVersion = deps.get("minecraft").getAsString();
                 if (deps.has("fabric-loader")) {
                     meta.loaderType = ModLoaderType.FABRIC;
                     meta.loaderVersion = deps.get("fabric-loader").getAsString();
@@ -612,10 +658,8 @@ public class CreateInstanceDialog {
         }
     }
 
-    /** Parses manifest.json (CurseForge format) or mmc-pack.json (MultiMC/Prism) inside a .zip. */
     private static ModpackMeta parseZipMeta(File file) throws Exception {
         try (ZipFile zip = new ZipFile(file)) {
-            // Try CurseForge manifest.json
             ZipEntry manifestEntry = zip.getEntry("manifest.json");
             if (manifestEntry != null) {
                 String json;
@@ -624,15 +668,10 @@ public class CreateInstanceDialog {
                 }
                 JsonObject root = JsonUtil.parse(json).getAsJsonObject();
                 ModpackMeta meta = new ModpackMeta();
-
-                if (root.has("name")) {
-                    meta.name = root.get("name").getAsString();
-                }
+                if (root.has("name")) meta.name = root.get("name").getAsString();
                 if (root.has("minecraft")) {
                     JsonObject mc = root.getAsJsonObject("minecraft");
-                    if (mc.has("version")) {
-                        meta.mcVersion = mc.get("version").getAsString();
-                    }
+                    if (mc.has("version")) meta.mcVersion = mc.get("version").getAsString();
                     if (mc.has("modLoaders")) {
                         JsonArray loaders = mc.getAsJsonArray("modLoaders");
                         if (!loaders.isEmpty()) {
@@ -656,8 +695,6 @@ public class CreateInstanceDialog {
                 }
                 return meta;
             }
-
-            // Try MultiMC/Prism mmc-pack.json
             ZipEntry mmcEntry = zip.getEntry("mmc-pack.json");
             if (mmcEntry != null) {
                 String json;
@@ -666,7 +703,6 @@ public class CreateInstanceDialog {
                 }
                 JsonObject root = JsonUtil.parse(json).getAsJsonObject();
                 ModpackMeta meta = new ModpackMeta();
-
                 if (root.has("components")) {
                     JsonArray comps = root.getAsJsonArray("components");
                     for (var el : comps) {
@@ -692,11 +728,8 @@ public class CreateInstanceDialog {
                 }
                 return meta;
             }
-
-            // Also try modrinth.index.json inside .zip (some packs are renamed .zip)
             ZipEntry modrinthEntry = zip.getEntry("modrinth.index.json");
             if (modrinthEntry != null) {
-                // Re-use mrpack parser
                 return parseMrpackMeta(file);
             }
         }
